2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSpeculativeGeneralityRule.cs: Fix rule check since we now use
	a single collection for all rules.

2008-02-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* Test/*.cs: Refactor the tests for accept the new rule's format.
	* *.cs: Adapt the rules to the new framework.
	* Makefile.am: Removed the -langversion:linq option.  You should use at
	least the 1.9 gmcs version to compile.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: Avoid positive when a class contains
	constants or readonly fields.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs, CodeDuplicatedLocator.cs, Expression.cs:
	For performance issues types which aren't visible outside of the
	assembly and haven't subclasses should be sealed.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongMethodsRule.cs: As suggested by Sebastien, the new
	comparisons are better than a string comparison.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLongMethodsRule.cs: The rule should be applied to static
	constructors.  Now we add several extra instructions for each field for
	initialize, specially if the field is an array.

2008-02-06  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLongMethodsRule.cs: The rule shouldn't be applied to static
	constructors.

2008-01-16  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: The rule shouldn't be applied to enums.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLongParameterListsTest.cs: Don't report defects for p/invokes

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLongMethodsRule.cs: Use new Location ctor.
	* AvoidLongParameterListsRule.cs: Use new Location ctor. Change 
	two methods to static.
	* AvoidSpeculativeGeneralityRule.cs: Use new Location ctor. Change
	four methods to static.